# rustdoc-mcp-server

./: Cargo.toml  README.md  server_instructions.md
.github/workflows/: publish.yml  test.yml
src/: cmd.rs  doc_gen.rs  index.rs  main.rs  markdown.rs  server.rs  types.rs  workspace.rs
